<resources>
    <string name="app_name">Myfamily</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="guard">GUARD</string>
    <string name="red_card_msg">In case of emergency, keep telling family members to contact me</string>
    <string name="green_card_msg">open when you are on a potentially dangerous journey</string>
    <string name="bottom_bar_Home">Home</string>
    <string name="bottom_bar_dashboard">Dashboard</string>
    <string name="bottom_bar_profile">User</string>
    <string name="bottom_bar_guard">Guard</string>
    <string name="my_family">my family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="dashboard">Dashboard</string>
</resources>